assets/css/v2/lcd_common/simulation.scss
.simulation-screen-scrolling-container {
  display: flex;
  padding-bottom: 20px;
  overflow: auto hidden;
  scrollbar-color: #607180 #2e3f4d;

  &::-webkit-scrollbar {
    width: 12px;
  }

  &::-webkit-scrollbar-thumb {
    background-color: #607180;
    border: 2px solid #2e3f4d;
    border-radius: 12px;
  }

  &::-webkit-scrollbar-track {
    background-color: #2e3f4d;
    border-radius: 12px;
    box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
  }

  .simulation__full-page {
    z-index: 999;
    width: 193.5px;
    height: 344px;
    margin-right: 24px;
    box-shadow: 0 0 32px 0 #00000040;

    & > * {
      transform: scale(17.92%);
      transform-origin: top left;
    }
  }
}

